[package]
name = "beatriz"
version = "0.1.0"
authors = ["Alyx Mote <figments@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.1"
tokio = {version="1.13", features=["macros"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"